--- a/package.json
+++ b/package.json
@@ -69,10 +69,10 @@
     "nunjucks": "^3.1.7"
   },
   "scripts": {
+    "start": "node index.js",
     "stisla-start": "yarn install --production=false",
     "stisla-dev": "yarn install --prod",
     "dist": "gulp dist",
-    "dev": "gulp",
-    "start": "node index.js"
+    "dev": "gulp"
   }
 }
