--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "datatables.net-responsive-bs4": "^2.2.3",
     "datatables.net-select-bs4": "^1.2.7",
     "dropzone": "^5.5.1",
-    "express": "^4.17.1",
     "flag-icon-css": "^3.2.1",
     "fullcalendar": "^3.10.0",
     "gmaps": "^0.4.24",
@@ -71,7 +70,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "stisla-start": "yarn install --production=false",
+    "stisla-start": "yarn install --production=true",
     "stisla-dev": "yarn install --prod",
     "dist": "gulp dist",
     "dev": "gulp"
