--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "stisla-start": "yarn install --production=true",
+    "stisla-start": "yarn install --production=false",
     "stisla-dev": "yarn install --prod",
     "dist": "gulp dist",
     "dev": "gulp"
