--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "datatables.net-responsive-bs4": "^2.2.3",
     "datatables.net-select-bs4": "^1.2.7",
     "dropzone": "^5.5.1",
+    "express": "^4.17.1",
     "flag-icon-css": "^3.2.1",
     "fullcalendar": "^3.10.0",
     "gmaps": "^0.4.24",
@@ -36,6 +37,7 @@
     "jqvmap": "https://github.com/10bestdesign/jqvmap",
     "moment": "^2.24.0",
     "nicescroll": "^3.7.4",
+    "node-sass": "4.13",
     "owl.carousel": "^2.3.4",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.14.7",
